--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+.is-invalid{
+    border: 1px solid #dc3545;
+    border-radius: 4px;
+}
