--- a/src/app/Component/product-list/product-list.component.html
+++ b/src/app/Component/product-list/product-list.component.html
@@ -1,3 +1,6 @@
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
 <div class="row">
   <div class="col" style="text-align:center;">
     <h2>Les Produits</h2>
@@ -72,5 +75,8 @@
         <img class="bd-placeholder-img" width="200" height="250" src="{{ product.pictureUrl }}" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" />
       </div>
     </div>
+  </div>
+</div>
+</div>
   </div>
 </div>
