--- a/src/app/Component/home/home.component.html
+++ b/src/app/Component/home/home.component.html
@@ -1,1 +1,6 @@
-
+<app-section-welcome></app-section-welcome>
+<main id="main">
+    <app-section-about></app-section-about>
+    <app-section-resume></app-section-resume>
+</main><!-- End #main -->
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
