--- a/src/app/Component/tag-list/tag-list.component.html
+++ b/src/app/Component/tag-list/tag-list.component.html
@@ -1,4 +1,7 @@
-<div class="row">
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="row">
   <div class="col" style="text-align:center;">
     <h2>Les Tags</h2>
   </div>
@@ -24,5 +27,8 @@
       </button>
     </div>
     <button class="btn btn-primary" (click)="onNewTag()">Nouveau Tag</button>
+  </div>
+</div>
+    </div>
   </div>
 </div>
