--- a/src/app/Shared/Component/header/header.component.html
+++ b/src/app/Shared/Component/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<!--<header>
   <div class="px-3 py-2 bg-dark text-white">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -40,4 +40,69 @@
       </div>
     </div>
   </div>
-</header>
+</header>-->
+
+<!-- ======= Header ======= -->
+<!--<header id="header" class="header fixed-top header-scrolled">
+  <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+
+    <a href="index.html" class="logo d-flex align-items-center nav-link">
+      <img src="assets/img/logo.png" alt="">
+      <span>Wyveth</span>
+    </a>
+
+    <nav id="navbar" class="navbar">
+      <ul>
+        <li><a class="nav-link scrollto active" href="#hero"><i class="ri-home-4-line"></i>Home</a></li>
+        <li><a class="nav-link scrollto" href="#about">About</a></li>
+        <li><a class="nav-link scrollto" href="#services">Services</a></li>
+        <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+        <li><a class="nav-link" href="blog.html">Blog</a></li>
+        <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+        <li class="dropdown"><a href="#" class="nav-link"><span><i class="ri-account-circle-line"></i></span><i class="bi bi-chevron-down"></i></a>
+          <ul>
+            --><!--<li routerLinkActive="active" *ngIf="!isAuth">
+              <a routerLink="auth/signup" class="nav-link">Créer un compte</a>
+            </li>-->
+            <!--<li routerLinkActive="active" *ngIf="!isAuth">
+              <a routerLink="auth/signin" class="nav-link">Connexion</a>
+            </li>
+            <li><a class="nav-link" *ngIf="isAuth">Profil</a></li>
+            <li class="dropdown"><a href="#" class="nav-link" *ngIf="isAuth"><i class="ri-dashboard-2-line"></i><span>Administration</span><i class="bi bi-chevron-right"></i></a>
+              <ul>
+                <li routerLinkActive="active"><a routerLink="products" class="nav-link">Produits</a></li>
+                <li routerLinkActive="active"><a routerLink="tags" class="nav-link">Tags</a></li>
+              </ul>
+            </li>
+            <li>
+              <a (click)="onSignOut()" style="cursor:pointer" class="nav-link" *ngIf="isAuth">Déconnexion</a>
+            </li>
+          </ul>
+        </li>
+        
+      </ul>
+      <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav>--><!-- .navbar -->
+
+  <!--</div>
+</header>--><!-- End Header -->
+
+<!-- ======= Mobile nav toggle button ======= -->
+  <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
+  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex flex-column justify-content-center">
+
+    <nav id="navbar" class="navbar nav-menu">
+      <ul>
+        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a class="nav-link scrollto"><i class="bx bx-user-circle"></i> <span>Profil</span></a></li>
+      </ul>
+    </nav><!-- .nav-menu -->
+
+  </header><!-- End Header -->
