--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
-<app-header></app-header>
+<!--<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
       <router-outlet></router-outlet>
     </div>
   </div>
-</div>
+</div>-->
+<app-header></app-header>
+<router-outlet></router-outlet>
+
