--- a/src/app/Component/product-form/product-form.component.html
+++ b/src/app/Component/product-form/product-form.component.html
@@ -1,57 +1,62 @@
-<div class="row">
-    <div class="col-sm-8 col-sm-offset-2">
-      <h2 *ngIf="isAddMode">Add Product</h2>
-      <h2 *ngIf="!isAddMode">Edit Product</h2>
-      <form [formGroup]="productForm" (ngSubmit)="onSubmitForm()">
+<app-breadcrumbs nodeParent="Accueil" nodeParentUrl="home" nodeChild="Produits"></app-breadcrumbs>
 
-        <div class="form-group form-control-sm">
-          <label for="title">Titre</label>
-          <input type="text" id="title" class="form-control" formControlName="title"
-            [ngClass]="{ 'is-invalid': shouldShowTitleError() }">
+<section class="inner-page">
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <h2 *ngIf="isAddMode">Add Product</h2>
+          <h2 *ngIf="!isAddMode">Edit Product</h2>
+          <form [formGroup]="productForm" (ngSubmit)="onSubmitForm()">
+
+            <div class="form-group form-control-sm">
+              <label for="title">Titre</label>
+              <input type="text" id="title" class="form-control" formControlName="title"
+                [ngClass]="{ 'is-invalid': shouldShowTitleError() }">
               <div *ngIf="f.title.errors" class="invalid-feedback">
                 <div *ngIf="f.title.errors.required">Le titre est obligatoire</div>
               </div>
-        </div>
-
-        <div class="form-group form-control-sm">
-          <label for="author">Auteur</label>
-          <input type="text" id="author" class="form-control" formControlName="author"
-            [ngClass]="{ 'is-invalid': shouldShowAuthorError() }">
-            <div *ngIf="f.author.errors" class="invalid-feedback">
-              <div *ngIf="f.author.errors.required">L'auteur est obligatoire</div>
             </div>
-        </div>
 
-        <div class="form-group form-control-sm">
-          <label for="content">Description</label>
-          <textarea id="content" class="form-control" formControlName="content"
-            [ngClass]="{ 'is-invalid': shouldShowContentError() }">
+            <div class="form-group form-control-sm">
+              <label for="author">Auteur</label>
+              <input type="text" id="author" class="form-control" formControlName="author"
+                [ngClass]="{ 'is-invalid': shouldShowAuthorError() }">
+              <div *ngIf="f.author.errors" class="invalid-feedback">
+                <div *ngIf="f.author.errors.required">L'auteur est obligatoire</div>
+              </div>
+            </div>
+
+            <div class="form-group form-control-sm">
+              <label for="content">Description</label>
+              <textarea id="content" class="form-control" formControlName="content"
+                [ngClass]="{ 'is-invalid': shouldShowContentError() }">
           </textarea>
-          <div *ngIf="f.content.errors" class="invalid-feedback">
-            <div *ngIf="f.content.errors.required">Le contenu est obligatoire</div>
-          </div>
-        </div>
+              <div *ngIf="f.content.errors" class="invalid-feedback">
+                <div *ngIf="f.content.errors.required">Le contenu est obligatoire</div>
+              </div>
+            </div>
 
-        <div class="form-group form-control-sm">
-          <h4>Ajouter une photo</h4>
-          <input type="file" (change)="detectFiles($event)"
-                 class="form-control" accept="image/*">
-          <p class="text-success" *ngIf="fileUploaded">Fichier chargé !</p>
-        </div>
+            <div class="form-group form-control-sm">
+              <h4>Ajouter une photo</h4>
+              <input type="file" (change)="detectFiles($event)" class="form-control" accept="image/*">
+              <p class="text-success" *ngIf="fileUploaded">Fichier chargé !</p>
+            </div>
 
-        <div class="form-group form-control-sm">
-          <ng-multiselect-dropdown formControlName="tagsKey"
-          [placeholder]="'Sélectionner un ou plusieurs Tags'"
-          [settings]="dropdownSettings"
-          [data]="dropdownList"
-          [ngClass]="{ 'is-invalid': shouldShowTagsKeyError() }">
-          </ng-multiselect-dropdown>
-          <div *ngIf="f.tagsKey.errors" class="invalid-feedback">
-            <div *ngIf="f.tagsKey.errors.required">Minimum un tag doit être sélectionné</div>
-          </div>
-        </div>
+            <div class="form-group form-control-sm">
+              <ng-multiselect-dropdown formControlName="tagsKey" [placeholder]="'Sélectionner un ou plusieurs Tags'"
+                [settings]="dropdownSettings" [data]="dropdownList"
+                [ngClass]="{ 'is-invalid': shouldShowTagsKeyError() }">
+              </ng-multiselect-dropdown>
+              <div *ngIf="f.tagsKey.errors" class="invalid-feedback">
+                <div *ngIf="f.tagsKey.errors.required">Minimum un tag doit être sélectionné</div>
+              </div>
+            </div>
 
-        <button class="btn btn-success" type="submit" [disabled]="productForm.invalid">Enregistrer</button>
-      </form>
+            <button class="btn btn-success" type="submit" [disabled]="productForm.invalid">Enregistrer</button>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
+</section>
