--- a/src/app/Component/section-portfolio/section-portfolio.component.html
+++ b/src/app/Component/section-portfolio/section-portfolio.component.html
@@ -5,16 +5,13 @@
 
     <header class="section-header">
       <h2>Portfolio</h2>
-      <p>Check our latest work</p>
+      <p>Mes dernière pièces</p>
     </header>
 
     <div class="row" data-aos="fade-up" data-aos-delay="100">
-      <div class="col-lg-12 d-flex justify-content-center">
+      <div ng-controller="myCtrl" class="col-lg-12 d-flex justify-content-center">
         <ul id="portfolio-flters">
-          <li data-filter="*" class="filter-active">All</li>
-          <li data-filter=".filter-app">App</li>
-          <li data-filter=".filter-card">Card</li>
-          <li data-filter=".filter-web">Web</li>
+          <li data-filter="*" class="filter-active">Toutes</li>
         </ul>
       </div>
     </div>
