--- a/src/app/Component/product-form/product-form.component.html
+++ b/src/app/Component/product-form/product-form.component.html
@@ -1,61 +1,105 @@
-<app-breadcrumbs nodeParent="Accueil" nodeParentUrl="home" nodeChild="Produits"></app-breadcrumbs>
+<app-breadcrumbs *ngIf="isAddMode" nodeParent="Accueil" nodeParentUrl="home" nodeChild="Produits"
+  nodeChildUrl="products" nodeChildChild="Créer"></app-breadcrumbs>
+<app-breadcrumbs *ngIf="!isAddMode" nodeParent="Accueil" nodeParentUrl="home" nodeChild="Produits"
+  nodeChildUrl="products" nodeChildChild="Modifier"></app-breadcrumbs>
 
 <section class="inner-page">
   <div class="container">
     <div class="row justify-content-md-center">
-      <div class="row">
-        <div class="col-sm-8 col-sm-offset-2">
-          <h2 *ngIf="isAddMode">Add Product</h2>
-          <h2 *ngIf="!isAddMode">Edit Product</h2>
-          <form [formGroup]="productForm" (ngSubmit)="onSubmitForm()">
-
-            <div class="form-group form-control-sm">
-              <label for="title">Titre</label>
-              <input type="text" id="title" class="form-control" formControlName="title"
-                [ngClass]="{ 'is-invalid': shouldShowTitleError() }">
-              <div *ngIf="f.title.errors" class="invalid-feedback">
-                <div *ngIf="f.title.errors.required">Le titre est obligatoire</div>
-              </div>
+      <div class="col-sm-6 formStyle">
+        <div class="row justify-content-md-center">
+          <h2 *ngIf="isAddMode" class="styleTitle">Enregistrer un nouveau produit</h2>
+          <h2 *ngIf="!isAddMode" class="styleTitle">Modifier un produit</h2>
+        </div>
+        <form [formGroup]="productForm" (ngSubmit)="onSubmitForm()">
+          <div class="form-group form-control-sm">
+            <label for="title">Titre</label>
+            <input type="text" id="title" class="form-control" formControlName="title"
+              [ngClass]="{ 'is-invalid': shouldShowTitleError() }">
+            <div *ngIf="f.title.errors" class="invalid-feedback">
+              <div *ngIf="f.title.errors.required">Le titre est obligatoire</div>
             </div>
+          </div>
 
-            <div class="form-group form-control-sm">
-              <label for="author">Auteur</label>
-              <input type="text" id="author" class="form-control" formControlName="author"
-                [ngClass]="{ 'is-invalid': shouldShowAuthorError() }">
-              <div *ngIf="f.author.errors" class="invalid-feedback">
-                <div *ngIf="f.author.errors.required">L'auteur est obligatoire</div>
-              </div>
+          <div class="form-group form-control-sm">
+            <label for="titleContent">Titre de la Description</label>
+            <input type="text" id="titleContent" class="form-control" formControlName="titleContent"
+              [ngClass]="{ 'is-invalid': shouldShowTitleContentError() }">
+            <div *ngIf="f.titleContent.errors" class="invalid-feedback">
+              <div *ngIf="f.titleContent.errors.required">Le titre de la description est obligatoire</div>
             </div>
+          </div>
 
-            <div class="form-group form-control-sm">
-              <label for="content">Description</label>
-              <textarea id="content" class="form-control" formControlName="content"
-                [ngClass]="{ 'is-invalid': shouldShowContentError() }">
+          <div class="form-group form-control-sm">
+            <label for="content">Description</label>
+            <textarea id="content" class="form-control" formControlName="content"
+              [ngClass]="{ 'is-invalid': shouldShowContentError() }">
           </textarea>
-              <div *ngIf="f.content.errors" class="invalid-feedback">
-                <div *ngIf="f.content.errors.required">Le contenu est obligatoire</div>
-              </div>
+            <div *ngIf="f.content.errors" class="invalid-feedback">
+              <div *ngIf="f.content.errors.required">Le contenu est obligatoire</div>
             </div>
+          </div>
 
-            <div class="form-group form-control-sm">
-              <h4>Ajouter une photo</h4>
+          <div class="form-group form-control-sm">
+            <label for="author">Auteur</label>
+            <input type="text" id="author" class="form-control" formControlName="author"
+              [ngClass]="{ 'is-invalid': shouldShowAuthorError() }">
+            <div *ngIf="f.author.errors" class="invalid-feedback">
+              <div *ngIf="f.author.errors.required">L'auteur est obligatoire</div>
+            </div>
+          </div>
+
+          <div class="form-group form-control-sm">
+            <label for="size">Taille</label>
+            <input type="text" id="size" class="form-control" formControlName="size"
+              [ngClass]="{ 'is-invalid': shouldShowSizeError() }">
+            <div *ngIf="f.size.errors" class="invalid-feedback">
+              <div *ngIf="f.size.errors.required">La taille est obligatoire</div>
+            </div>
+          </div>
+
+          <div class="form-group form-control-sm">
+            <label for="time">Temps</label>
+            <input type="text" id="time" class="form-control" formControlName="time"
+              [ngClass]="{ 'is-invalid': shouldShowTimeError() }">
+            <div *ngIf="f.time.errors" class="invalid-feedback">
+              <div *ngIf="f.time.errors.required">Le temps est obligatoire</div>
+            </div>
+          </div>
+
+          <div class="form-group form-control-sm">
+            <label for="date">Date</label>
+            <input type="text" id="date" class="form-control" formControlName="date"
+              [ngClass]="{ 'is-invalid': shouldShowDateError() }">
+            <div *ngIf="f.date.errors" class="invalid-feedback">
+              <div *ngIf="f.date.errors.required">La date est obligatoire</div>
+            </div>
+          </div>
+
+          <div class="row mb-3" style="margin-top: 2rem;">
+            <label for="formFile" class="col-sm-3 col-form-label">Ajouter une photo</label>
+            <div class="col-sm-9">
               <input type="file" (change)="detectFiles($event)" class="form-control" accept="image/*">
               <p class="text-success" *ngIf="fileUploaded">Fichier chargé !</p>
             </div>
+          </div>
 
-            <div class="form-group form-control-sm">
-              <ng-multiselect-dropdown formControlName="tagsKey" [placeholder]="'Sélectionner un ou plusieurs Tags'"
-                [settings]="dropdownSettings" [data]="dropdownList"
-                [ngClass]="{ 'is-invalid': shouldShowTagsKeyError() }">
-              </ng-multiselect-dropdown>
-              <div *ngIf="f.tagsKey.errors" class="invalid-feedback">
-                <div *ngIf="f.tagsKey.errors.required">Minimum un tag doit être sélectionné</div>
-              </div>
+          <div class="form-group form-control-sm">
+            <ng-multiselect-dropdown formControlName="tagsKey" [placeholder]="'Sélectionner un ou plusieurs Tags'"
+              [settings]="dropdownSettings" [data]="dropdownList"
+              [ngClass]="{ 'is-invalid': shouldShowTagsKeyError() }">
+            </ng-multiselect-dropdown>
+            <div *ngIf="f.tagsKey.errors" class="invalid-feedback">
+              <div *ngIf="f.tagsKey.errors.required">Minimum un tag doit être sélectionné</div>
             </div>
+          </div>
 
-            <button class="btn btn-success" type="submit" [disabled]="productForm.invalid">Enregistrer</button>
-          </form>
-        </div>
+          <div class="row" style="margin-top: 2rem;">
+            <div class="col">
+              <button class="btn btn-success" type="submit" [disabled]="productForm.invalid">Enregistrer</button>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
