--- a/src/app/Component/product-list/product-list.component.html
+++ b/src/app/Component/product-list/product-list.component.html
@@ -7,7 +7,7 @@
         <button class="btn btn-primary btn-sm" (click)="onNewProduct()">Nouveau Produit</button>
       </div>
     </div>
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3" style="margin-top: 20px;">
       <div class="col" *ngFor="let product of products; let i = index">
         <div class="card shadow-sm">
           <div class="card-head">
