--- a/src/app/Component/tag-form/tag-form.component.html
+++ b/src/app/Component/tag-form/tag-form.component.html
@@ -1,26 +1,55 @@
-<div class="row">
-  <div class="col-sm-8 col-sm-offset-2">
-    <h2 *ngIf="isAddMode">Enregistrer un nouveau tag</h2>
-    <h2 *ngIf="!isAddMode">Modifier un tag</h2>
-    <form [formGroup]="tagForm" (ngSubmit)="onSubmitForm()">
-      <div class="form-group form-control-sm">
-        <label for="code">Code</label>
-        <input type="text" id="code" class="form-control" formControlName="code"
-          [ngClass]="{'is-invalid': shouldShowCodeError()}">
-        <div *ngIf="f.code.errors || f.code.invalid" class="invalid-feedback">
-          <div *ngIf="f.code.errors?.required">Le code est obligatoire</div>
-          <div *ngIf="f.code.invalid && (f.code.dirty || f.code.touched)">Le code doit être unique</div>
+<app-breadcrumbs *ngIf="isAddMode" nodeParent="Accueil" nodeParentUrl="home" nodeChild="Tags" nodeChildUrl="tags"
+  nodeChildChild="Créer"></app-breadcrumbs>
+<app-breadcrumbs *ngIf="!isAddMode" nodeParent="Accueil" nodeParentUrl="home" nodeChild="Tags" nodeChildUrl="tags"
+  nodeChildChild="Modifier"></app-breadcrumbs>
+
+<section class="inner-page">
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col-sm-6 formStyle">
+        <div class="row justify-content-md-center">
+          <h2 *ngIf="isAddMode" class="styleTitle">Enregistrer un nouveau tag</h2>
+          <h2 *ngIf="!isAddMode" class="styleTitle">Modifier un tag</h2>
         </div>
+        <form [formGroup]="tagForm" (ngSubmit)="onSubmitForm()">
+          <div class="row">
+            <div class="col">
+              <div class="form-group form-control-sm">
+                <label for="code">Code</label>
+                <input type="text" id="code" class="form-control" formControlName="code"
+                  [ngClass]="{'is-invalid': shouldShowCodeError()}">
+                <div *ngIf="f.code.errors || f.code.invalid" class="invalid-feedback">
+                  <div *ngIf="f.code.errors?.required">Le code est obligatoire</div>
+                  <div *ngIf="f.code.invalid && (f.code.dirty || f.code.touched)">Le code doit être unique</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="form-group form-control-sm">
+                <label for="libelle">Libelle</label>
+                <input type="text" id="libelle" class="form-control" formControlName="libelle"
+                  [ngClass]="{ 'is-invalid': shouldShowLibelleError() }">
+                <div *ngIf="f.libelle.errors" class="invalid-feedback">
+                  <div *ngIf="f.libelle.errors.required">Le libelle est obligatoire</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row mb-3" style="margin-top: 2rem;">
+            <label for="formFile" class="col-sm-3 col-form-label">Ajouter une photo</label>
+            <div class="col-sm-9">
+              <input type="file" (change)="detectFiles($event)" class="form-control" accept="image/*">
+              <p class="text-success" *ngIf="fileUploaded">Fichier chargé !</p>
+            </div>
+          </div>
+
+          <div class="row" style="margin-top: 2rem;">
+            <div class="col">
+              <button class="btn btn-success" type="submit" [disabled]="tagForm.invalid">Enregistrer</button>
+            </div>
+          </div>
+        </form>
       </div>
-      <div class="form-group form-control-sm">
-        <label for="libelle">Libelle</label>
-        <input type="text" id="libelle" class="form-control" formControlName="libelle"
-          [ngClass]="{ 'is-invalid': shouldShowLibelleError() }">
-        <div *ngIf="f.libelle.errors" class="invalid-feedback">
-          <div *ngIf="f.libelle.errors.required">Le libelle est obligatoire</div>
-        </div>
-      </div>
-      <button class="btn btn-success" type="submit" [disabled]="tagForm.invalid">Enregistrer</button>
-    </form>
+    </div>
   </div>
-</div>
+</section>
