--- a/src/app/Component/tag-list/tag-list.component.html
+++ b/src/app/Component/tag-list/tag-list.component.html
@@ -1,34 +1,34 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="row">
-  <div class="col" style="text-align:center;">
-    <h2>Les Tags</h2>
-  </div>
-</div>
+<app-breadcrumbs nodeParent="Accueil" nodeParentUrl="home" nodeChild="Tags"></app-breadcrumbs>
 
-<div class="row">
-  <div class="col-xs-12">
-    <h2>Les Tags</h2>
-    <div class="list-group">
-      <button
-        class="list-group-item"
-        *ngFor="let tag of tags; let i = index">
-        <h3 class="list-group-item-heading">
-          {{ tag.code }}
-          <button class="btn btn-default pull-right" (click)="onEditTag(tag.key)">
-            <i class="fas fa-edit"></i>
-          </button>
-          <button class="btn btn-default pull-right" (click)="onDeleteTag(tag)">
-            <i class="fas fa-trash"></i>
-          </button>
-        </h3>
-        <p class="list-group-item-text">{{ tag.libelle }}</p>
-      </button>
+<section class="inner-page">
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col col-lg-2">
+        <button class="btn btn-primary btn-sm" (click)="onNewTag()">Nouveau Tag</button>
+      </div>
     </div>
-    <button class="btn btn-primary" (click)="onNewTag()">Nouveau Tag</button>
-  </div>
-</div>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3" style="margin-top: 20px;">
+      <div class="col" *ngFor="let tag of tags; let i = index">
+        <div class="card shadow-sm">
+          <div class="card-head">
+            <img style="max-height: 50%;" class="bd-placeholder-img card-img-top" src="{{ tag.pictureUrl}}"
+              role="img" aria-label="Placeholder: Test" preserveAspectRatio="xMidYMid slice" focusable="false" />
+          </div>
+          <div class="card-body">
+            <p class="card-text">{{ tag.code }} - {{ tag.libelle }}</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a class="btn btn-sm btn-outline-light link-warning" (click)="onEditTag(tag.key)">
+                  <i class="fas fa-edit"></i>
+                </a>
+                <a class="btn btn-sm btn-outline-light link-danger" (click)="onDeleteTag(tag)">
+                  <i class="fas fa-trash"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+</section>
