--- a/src/app/Component/section-resume/section-resume.component.html
+++ b/src/app/Component/section-resume/section-resume.component.html
@@ -14,96 +14,122 @@
         <div class="accordion accordion-flush" id="faqlist1">
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
-                Non consectetur a erat nam at lectus urna duis?
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#faq-content-1">
+                Quel type de perle?
               </button>
             </h2>
             <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
               <div class="accordion-body">
-                Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                <p>Les pièces sont fabriquées avec les perles HAMA MIDI (Ø5 mm).</p>
+                <p>Pour en acheter aux moins cher:</p>
+                <ul>
+                  <li>Megacréa: <a
+                      href="https://www.megacrea.com/activites-enfant-40000/perle-a-repasser-hama-40400/">Cliquer
+                      ici</a> (Bon rapport qualité/prix mais pas toutes les couleurs du nuancier HAMA)</li>
+                  <li>RittoHobby: <a href="https://ritohobby.fr/45_hama">Cliquer ici</a> (Le moins cher, mais frais de
+                    port élevé sur les petites commandes)</li>
+                </ul>
               </div>
             </div>
           </div>
-
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
-                Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#faq-content-2">
+                La fabrication est-elle longue?
               </button>
             </h2>
             <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
               <div class="accordion-body">
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                Ça dépend des pièces, les plus petites prennent environ 1h et pour les plus grosses, ça peut monter
+                jusqu'à 20h de travail.
               </div>
             </div>
           </div>
-
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#faq-content-3">
+                Evolution du site? (Développé par mes soins en Angular 12 avec FireBase)
               </button>
             </h2>
             <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
               <div class="accordion-body">
-                Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                <p>Pour le futur, le site aura de nouvelles fonctionnalités:</p>
+                <ul>
+                  <li>
+                    Système d'avis sur les pièces
+                  </li>
+                  <li>
+                    Mode Sombre + Mode Anglais
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
-
         </div>
       </div>
 
       <div class="col-lg-6">
-
         <!-- F.A.Q List 2-->
         <div class="accordion accordion-flush" id="faqlist2">
-
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2-content-1">
-                Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#faq2-content-1">
+                Quels matériels?
               </button>
             </h2>
             <div id="faq2-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
               <div class="accordion-body">
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                <p>il vous faut:</p>
+                <ul>
+                  <li>
+                    Des plaques pour perle MIDI. Pour en acheter: <a
+                      href="https://www.megacrea.com/plaque-carre-transp-assemblable-pour-perles-a-repasser-dia5mm-33749.html">Cliquer
+                      ici</a>
+                  </li>
+                  <li>
+                    Une pince pour déplacer les perles. Pour en acheter: <a
+                      href="https://www.megacrea.com/pince-attrape-perles-a-repasser-27868.html">Cliquer ici</a>
+                  </li>
+                  <li>
+                    Du papier cuisson et un fer à repasser.
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
-
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2-content-2">
-                Tempus quam pellentesque nec nam aliquam sem et tortor consequat?
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#faq2-content-2">
+                Peut on les acheter?
               </button>
             </h2>
-            <div id="faq2-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
+            <div id="faq2-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
               <div class="accordion-body">
-                Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
+                Vous pouvez prendre contact avec moi via le formulaire en bas de page pour connaître les modalités.
               </div>
             </div>
           </div>
-
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2-content-3">
-                Varius vel pharetra vel turpis nunc eget lorem dolor?
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#faq2-content-3">
+                Je suis peut être en Live sur twitch!
               </button>
             </h2>
-            <div id="faq2-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
+            <div id="faq2-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
               <div class="accordion-body">
-                Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
+                Si vous avez la moindre question, ne pas hésiter à me contacter par le formulaire de contact ou venir me
+                voir en live sur twitch
               </div>
             </div>
           </div>
-
         </div>
       </div>
-
     </div>
-
   </div>
-
 </section><!-- End F.A.Q Section -->
-
