--- a/src/app/Component/section-welcome/section-welcome.component.html
+++ b/src/app/Component/section-welcome/section-welcome.component.html
@@ -11,7 +11,7 @@
         <h2 data-aos="fade-up" data-aos-delay="400">We are team of talented designers making websites with Bootstrap</h2>
         <div data-aos="fade-up" data-aos-delay="600">
           <div class="text-center text-lg-start">
-            <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+            <a href="#portfolio" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
               <span>Découvrir</span>
               <i class="bi bi-arrow-right"></i>
             </a>
