--- a/src/app/Shared/Component/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/Shared/Component/breadcrumbs/breadcrumbs.component.html
@@ -3,10 +3,10 @@
   <div class="container">
     <ol>
       <li><a href="{{ nodeParentUrl }}">{{ nodeParent }}</a></li>
-      <li *ngIf="!nodeChildUrl">{{ nodeChild }}</li>
+      <li *ngIf="!nodeChildUrl" class="active">{{ nodeChild }}</li>
       <li *ngIf="nodeChildUrl"><a href="{{ nodeChildUrl }}">{{ nodeChild }}</a></li>
-      <li *ngIf="!nodeChildChildUrl">{{ nodeChildChild }}</li>
-      <li *ngIf="nodeChildChildUrl"><a href="{{ nodeChildChildUrl }}">{{ nodeChildChild }}</a></li>
+      <li *ngIf="!nodeChildChildUrl" class="active">{{ nodeChildChild }}</li>
+      <li *ngIf="nodeChildChildUrl"  class="active"><a href="{{ nodeChildChildUrl }}">{{ nodeChildChild }}</a></li>
     </ol>
   </div>
 </section>
