--- a/src/app/Component/section-resume/section-resume.component.html
+++ b/src/app/Component/section-resume/section-resume.component.html
@@ -1,7 +1,7 @@
 <!-- ======= F.A.Q Section ======= -->
 <section id="faq" class="faq">
 
-  <div class="container" data-aos="fade-up">
+  <div class="container" data-aos="flip-down" data-aos-delay="300">
 
     <header class="section-header">
       <h2>F.A.Q</h2>
@@ -9,7 +9,7 @@
     </header>
 
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-6" data-aos="fade-right" data-aos-delay="500">
         <!-- F.A.Q List 1-->
         <div class="accordion accordion-flush" id="faqlist1">
           <div class="accordion-item">
@@ -51,12 +51,12 @@
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#faq-content-3">
-                Evolution du site? (Développé par mes soins en Angular 12 avec FireBase)
+                Evolution du site? 
               </button>
             </h2>
             <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
               <div class="accordion-body">
-                <p>Pour le futur, le site aura de nouvelles fonctionnalités:</p>
+                <p>Pour le futur, le site aura de nouvelles fonctionnalités: (Développé par mes soins en Angular 12 avec FireBase)</p>
                 <ul>
                   <li>
                     Système d'avis sur les pièces
@@ -71,7 +71,7 @@
         </div>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-6" data-aos="fade-left" data-aos-delay="500">
         <!-- F.A.Q List 2-->
         <div class="accordion accordion-flush" id="faqlist2">
           <div class="accordion-item">
