--- a/src/app/Component/section-welcome/section-welcome.component.html
+++ b/src/app/Component/section-welcome/section-welcome.component.html
@@ -4,11 +4,11 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-        <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+        <img src="assets/img/Perles.png" class="img-fluid" alt=""><!--assets/img/hero-img.png-->
       </div>
       <div class="col-lg-6 d-flex flex-column justify-content-center">
-        <h1 data-aos="fade-up">Et si les perles Hama n'était pas que pour les enfants</h1>
-        <h2 data-aos="fade-up" data-aos-delay="400">We are team of talented designers making websites with Bootstrap</h2>
+        <h1 data-aos="fade-up">Wyveth Pixel Art</h1>
+        <h2 data-aos="fade-up" data-aos-delay="400">Et si les perles à chauffer n'était pas que pour les enfants?</h2>
         <div data-aos="fade-up" data-aos-delay="600">
           <div class="text-center text-lg-start">
             <a href="#portfolio" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
