--- a/src/app/Shared/Component/header/header.component.html
+++ b/src/app/Shared/Component/header/header.component.html
@@ -3,8 +3,8 @@
   <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
     <a href="index.html" class="logo d-flex align-items-center nav-link">
-      <img src="assets/img/logo.png" alt="">
-      <span>Wyveth Perler</span>
+      <img src="assets/img/LogoHome.png" alt="" style="margin-right: 0px; max-height: 42px;">
+      <span>yveth Perler</span>
     </a>
 
     <nav id="navbar" class="navbar">
@@ -21,11 +21,12 @@
             <li routerLinkActive="active" *ngIf="!isAuth">
               <a routerLink="auth/signin" class="nav-link">Connexion</a>
             </li>
-            <li><a class="nav-link" *ngIf="isAuth">Profil</a></li>
+            <!--<li><a class="nav-link" *ngIf="isAuth">Profil</a></li>-->
             <li class="dropdown"><a href="#" class="nav-link" *ngIf="isAuth"><i class="ri-dashboard-2-line"></i><span>Administration</span><i class="bi bi-chevron-right"></i></a>
               <ul>
                 <li routerLinkActive="active"><a routerLink="products" class="nav-link">Produits</a></li>
                 <li routerLinkActive="active"><a routerLink="tags" class="nav-link">Tags</a></li>
+                <li routerLinkActive="active"><a routerLink="contacts" class="nav-link">Contacts</a></li>
               </ul>
             </li>
             <li>
