--- a/src/app/Component/single-product/single-product.component.html
+++ b/src/app/Component/single-product/single-product.component.html
@@ -31,7 +31,7 @@
           <ul>
             <li><strong>Tags</strong>: {{ product.tagsVisu }}</li>
             <li><strong>Créateur</strong>: {{ product.author }}</li>
-            <li><strong>Taille</strong>: {{ product.size }}</li>
+            <li><strong>Taille (H x L)</strong>: {{ product.size }}</li>
             <li><strong>Temps</strong>: {{ product.time }}</li>
             <li><strong>Date</strong>: {{ product.date }}</li>
           </ul>
