--- a/src/app/Component/section-welcome/section-welcome.component.html
+++ b/src/app/Component/section-welcome/section-welcome.component.html
@@ -1,11 +1,11 @@
 <!-- ======= Hero Section ======= -->
-<section id="hero" class="hero d-flex align-items-center">
+<!--<section id="hero" class="hero d-flex align-items-center">
 
   <div class="container">
     <div class="row">
       <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-        <img src="assets/img/Perles.png" class="img-fluid" alt=""><!--assets/img/hero-img.png-->
-      </div>
+        <img src="assets/img/Perles.png" class="img-fluid" alt="">--><!--assets/img/hero-img.png-->
+      <!--</div>
       <div class="col-lg-6 d-flex flex-column justify-content-center">
         <h1 data-aos="fade-up">Wyveth Pixel Art</h1>
         <h2 data-aos="fade-up" data-aos-delay="400">Et si les perles à chauffer n'était pas que pour les enfants?</h2>
@@ -21,6 +21,147 @@
     </div>
   </div>
 
-</section><!-- End Hero -->
+</section>--><!-- End Hero -->
 
+<!--<section id="test" class="hero d-flex align-items-center">
+  <div class="container">
+    <div class="row">-->
+      <!--<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../../../assets/img/Perles-Atelier.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/PokemonGen1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/Pokemon Starter.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/Justice League.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>-->
+
+      <!--<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../../../assets/img/Perles-Atelier.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/PokemonGen1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/Justice League.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+  </div>
+</section>-->
+
+<section id="hero">
+<div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
+
+  <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
+
+  <div class="carousel-inner" role="listbox">
+
+    <!-- Slide 1 -->
+    <div class="carousel-item active" style="background-image: url(assets/img/Perles-Atelier.jpg)">
+      <div class="container">
+        <h2>Wyveth <span>Pixel Art</span></h2>
+        <p>Et si les perles à chauffer n'était pas que pour les enfants?</p>
+        <a href="#portfolio" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+          <span>Découvrir</span>
+          <i class="bi bi-arrow-right"></i>
+        </a>
+      </div>
+    </div>
+
+    <!-- Slide 2 -->
+    <div class="carousel-item" style="background-image: url(assets/img/PokemonGen1.jpg)">
+      <div class="container">
+        <h2>Wyveth <span>Pixel Art</span></h2>
+        <p>Et si les perles à chauffer n'était pas que pour les enfants?</p>
+        <a href="#portfolio" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+          <span>Découvrir</span>
+          <i class="bi bi-arrow-right"></i>
+        </a>
+      </div>
+    </div>
+
+    <!-- Slide 3 -->
+    <div class="carousel-item" style="background-image: url(assets/img/Justice_League.jpg)">
+      <div class="container">
+        <h2>Wyveth <span>Pixel Art</span></h2>
+        <p>Et si les perles à chauffer n'était pas que pour les enfants?</p>
+        <a href="#portfolio" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+          <span>Découvrir</span>
+          <i class="bi bi-arrow-right"></i>
+        </a>
+      </div>
+    </div>
+
+    <!-- Slide 4 -->
+    <div class="carousel-item" style="background-image: url(assets/img/Pokemon_Starter.jpg)">
+      <div class="container">
+        <h2>Wyveth <span>Pixel Art</span></h2>
+        <p>Et si les perles à chauffer n'était pas que pour les enfants?</p>
+        <a href="#portfolio" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+          <span>Découvrir</span>
+          <i class="bi bi-arrow-right"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
+  </a>
+
+  <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
+    <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
+  </a>
+
+</div>
+</section><!-- End Hero -->
 
