User Service OK

--- a/src/app/Component/single-product/single-product.component.html
+++ b/src/app/Component/single-product/single-product.component.html
@@ -44,10 +44,16 @@
           <!--<p>
             <button class="btn btn-default" (click)="onBack()">Retour</button>
           </p>-->
+            <strong>Avis</strong>:<br/>
+              <ng-template #t let-fill="fill">
+                <span class="star" [class.full]="fill === 100">
+                  <span class="half" [style.width.%]="fill">&starf;;</span>&starf;
+                </span>
+              </ng-template>
+              <ngb-rating [(rate)]="currentRate" [starTemplate]="t" [readonly]="true" [max]="5"></ngb-rating>
+              {{ currentRate }}
         </div>
       </div>
-
     </div>
-
   </div>
 </section><!-- End Portfolio Details Section -->
