--- a/src/app/Component/auth/signup/signup.component.html
+++ b/src/app/Component/auth/signup/signup.component.html
@@ -5,11 +5,11 @@
     <div class="row justify-content-md-center">
       <div class="col-sm-6 formStyle">
         <div class="row justify-content-md-center">
-          <h2 class="styleTitle">Créer un comtpe</h2>
+          <h2 class="styleTitle">Créer un compte</h2>
         </div>
 
         <form class="row g-3" [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-          <div class="col-md-6">
+          <!--<div class="col-md-6">
             <div class="form-group">
               <label for="email">Adresse mail</label>
               <input type="text" id="email" class="form-control" formControlName="email">
@@ -19,6 +19,44 @@
             <div class="form-group">
               <label for="password">Mot de passe</label>
               <input type="password" id="password" class="form-control" formControlName="password">
+            </div>
+          </div>-->
+
+          <div class="form-group">
+            <label>Pseudo</label>
+            <input type="text" formControlName="pseudo" class="form-control form-control-sm"
+              [ngClass]="{ 'is-invalid': shouldShowPseudoError() }" />
+            <div *ngIf="f.pseudo.errors" class="invalid-feedback">
+              <div *ngIf="f.pseudo.errors.required">Le pseudo est obligatoire</div>
+              <div *ngIf="f.pseudo.errors.pseudoExists && (f.pseudo.dirty || f.pseudo.touched)">Le pseudo est déjà utilisé</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label>Email</label>
+            <input type="text" formControlName="email" class="form-control form-control-sm"
+              [ngClass]="{ 'is-invalid': shouldShowEmailError() }" />
+            <div *ngIf="f.email.errors" class="invalid-feedback">
+              <div *ngIf="f.email.errors.required">L'email est obligatoire</div>
+              <div *ngIf="f.email.errors.email">L'email n'est pas valide</div>
+              <div *ngIf="f.email.errors.emailExists">L'email est déjà utilisé</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label>Mot de passe</label>
+            <input type="password" formControlName="password" class="form-control form-control-sm"
+              [ngClass]="{ 'is-invalid': f.password.errors }" />
+            <div *ngIf="f.password.errors" class="invalid-feedback">
+              <div *ngIf="f.password.errors.required">Le mot de passe est requis</div>
+              <div *ngIf="f.password.errors.minlength">Le mot de passe doit avoir au moins 6 caractères</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label>Confirmer Mot de passe</label>
+            <input type="password" formControlName="confirmPassword" class="form-control form-control-sm"
+              [ngClass]="{ 'is-invalid': f.confirmPassword.errors }" />
+            <div *ngIf="f.confirmPassword.errors" class="invalid-feedback">
+              <div *ngIf="f.confirmPassword.errors.required">La confirmation du mot de passe est requis</div>
+              <div *ngIf="f.confirmPassword.errors.mustMatch">Les mots de passe doivent être identique</div>
             </div>
           </div>
           <button class="btn btn-primary" type="submit" [disabled]="signupForm.invalid">Créer mon compte</button>
